// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> should pass className 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  border-radius: 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: calc(100% - 60px);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: var(--pv-size-base-6);
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 640px;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="my-class-name emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;

exports[`<Dialog /> should render fullscreen 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
}

.emotion-2 {
  border-radius: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 100%;
  height: 100%;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;

exports[`<Dialog /> should render with default open styles 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  border-radius: 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: calc(100% - 60px);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: var(--pv-size-base-6);
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 640px;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;

exports[`<Dialog /> should render with default styles 1`] = `
<body>
  <div />
</body>
`;

exports[`<Dialog /> sizes size "large" 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  border-radius: 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: calc(100% - 60px);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: var(--pv-size-base-6);
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 1024px;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;

exports[`<Dialog /> sizes size "medium" 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  border-radius: 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: calc(100% - 60px);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: var(--pv-size-base-6);
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 640px;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;

exports[`<Dialog /> sizes size "small" 1`] = `
.emotion-0 {
  position: fixed;
  z-index: 1300;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  background: var(--pv-color-black);
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  -webkit-tap-highlight-color: transparent;
}

.emotion-2 {
  border-radius: 4px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: calc(100% - 60px);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: var(--pv-size-base-6);
  position: relative;
  outline: none;
  overflow: hidden;
  border: 0;
  padding: 0;
  box-shadow: var(--pv-shadow-dark-hight);
  max-width: 310px;
  color: var(--pv-color-black);
  background-color: var(--pv-color-white);
}

<body>
  <div />
  <div
    aria-hidden="false"
    class="emotion-0"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
      style="opacity: 0.5; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <fieldset
      class="emotion-2"
      role="dialog"
      style="opacity: 1; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      Dialog Content
    </fieldset>
  </div>
</body>
`;
